--- a/day1/challenge1/ourIndex.html
+++ b/day1/challenge1/ourIndex.html
@@ -13,11 +13,31 @@
   <body>
     <article class="container">
       <div>
-        <h1 class="title"></h1>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <h1 class="title">Lorem ipsum dolor sit.</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod unde
+          rerum, deleniti ea obcaecati sint hic odit dicta tenetur qui ut
+          dolorum provident sit, atque, reprehenderit nulla voluptate! Officiis,
+          consectetur?
+        </p>
+        <p>
+          Iste ipsa enim delectus porro, ullam repellendus maiores quis rem
+          debitis cum, necessitatibus architecto dolor? Velit, ad quaerat
+          blanditiis veritatis expedita totam vel voluptatem officiis officia ab
+          modi voluptatibus obcaecati.
+        </p>
+        <p>
+          Accusantium minima iusto nobis fuga hic explicabo unde illum,
+          perferendis et animi aperiam quaerat, eaque deleniti alias blanditiis
+          exercitationem commodi repudiandae ullam consequatur incidunt
+          reiciendis repellat officia laboriosam. Esse, modi.
+        </p>
+        <p>
+          Expedita cupiditate iure odit, delectus placeat optio magnam assumenda
+          mollitia aspernatur at saepe nisi commodi natus excepturi voluptate.
+          Recusandae nisi dolorem, necessitatibus optio aliquam repellat.
+          Adipisci, incidunt. Consequuntur, natus nulla.
+        </p>
       </div>
     </article>
     <script src="ourApp.js"></script>
