added initial markup for flexbox challenge1

--- a/day4/flexboxChallenge1/ourIndex.html
+++ b/day4/flexboxChallenge1/ourIndex.html
@@ -7,11 +7,10 @@
     <meta name="description" content="Learning Nodejs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Day 3 Challenge 3</title>
+    <link rel="stylesheet" href="ourStyle.css" />
+    <title>Flexbox Challenge 1</title>
   </head>
   <body>
-    <a href="#hero">Skip to Hero Section</a>
     <header role="banner">
       <section id="hero" class="hero">
         <article class="container">
@@ -27,12 +26,6 @@
         </article>
       </section>
     </header>
-    <!-- <section class="testing-understanding">
-      <header class="secondary title">
-        <h1>Secondary Title</h1>
-      </header>
-    </section> -->
-
-    <script src="app.js"></script>
+    <script src="ourApp.js"></script>
   </body>
 </html>
