pushing day4 challenge codes

--- a/day4/flexboxChallenge1/ourIndexGrid.html
+++ b/day4/flexboxChallenge1/ourIndexGrid.html
@@ -7,33 +7,29 @@
     <meta name="description" content="Learning Nodejs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="ourStyle.css" />
+    <link rel="stylesheet" href="ourIndexGrid.css" />
     <title>Flexbox Challenge 1</title>
   </head>
   <body>
     <header role="banner">
       <section role="region" id="hero" class="hero bg-dark">
         <article class="container">
-          <div class="hero__text">
-            <h1 class="hero__title">
-              Responsive layouts don’t have to be a struggle
-            </h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam.
-            </p>
-            <button class="btn">I want to learn</button>
-          </div>
+          <h1 class="hero__title">
+            Responsive layouts don’t have to be a struggle
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+          <button class="btn">I want to learn</button>
         </article>
       </section>
     </header>
     <main role="main">
       <section role="region" class="content-one">
-        <!-- one single heading for each section  -->
-        <article class="container columns text-centered">
+        <article class="container grid">
           <div class="inner-container">
-            <!-- these should have sub headings or sub sections -->
             <h2>Cheap</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -57,13 +53,8 @@
               enim ad minim veniam.
             </p>
           </div>
-        </article>
-      </section>
-      <section role="region" class="content-two bg-dark">
-        <!-- one single heading for each section  -->
-        <article class="container columns text-centered">
+
           <div class="inner-container">
-            <!-- these should have sub headings or sub sections -->
             <h2>Cheap</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
