pushing day11 markups and notes

--- a/day11/navChallenge/starter/ourIndex.html
+++ b/day11/navChallenge/starter/ourIndex.html
@@ -113,6 +113,22 @@
   </body>
 </html>
 
+<!-- <picture>
+    goes from top to bottom.
+    <source media="(min-width: 60em)"
+            srcset="img/made-up-image-large.jpg 534w,
+                    img/made-up-image-large@2x.jpg 1068w,
+                    img/made-up-image-large@3x.jpg 1602w">
+    <source media="(min=width: 37.5em)"
+            srcset="img/made-up-image-medium.jpg 534w,
+                    img/made-up-image-medium@2x.jpg 1068w,
+                    img/made-up-image-medium@3x.jpg 1602w">
+    <source media="img/made-up-image-small.jpg,
+                    img/made-up-image-small@2x.jpg,
+                    img/made-up-image-small@3x.jpg">
+    <img src="img/made-up-img-small.jpg" alt=""> fall back. want to style the img element and not the picture element.
+</picture> -->
+
 <!-- 
 
     
