pushing day12 code to git

--- a/day12/flexboxChallenge4/index.html
+++ b/day12/flexboxChallenge4/index.html
@@ -24,6 +24,11 @@
           <h2 class="section-title text-centered">Quality Designs</h2>
         </header>
         <div class="columns">
+          <!-- we can put each <p> in its own container with a class of column. so if we want to add more content it won't mess up the layout -->
+          <!-- <article>
+            <h3>Hello world</h3>
+          </article>
+          <h2>this is a test</h2> -->
           <p class="col-2">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui
