pushing initial markup and starter code for final challenge

--- a/day12/flexboxChallenge4/index.html
+++ b/day12/flexboxChallenge4/index.html
@@ -12,10 +12,12 @@
   </head>
   <body>
     <header role="banner" class="hero">
-      <p>lorem ipsum sit</p>
-      <h1 class="primary-title">
-        Responsive layouts don’t have to be a struggle
-      </h1>
+      <div class="container">
+        <p>lorem ipsum sit</p>
+        <h1 class="primary-title">
+          Responsive layouts don’t have to be a struggle
+        </h1>
+      </div>
       <!-- <section class="hero" role="region"></section> -->
     </header>
     <main role="main" class="main">
