before we added content to index.html

--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -11,6 +11,115 @@
     <title>CSS Responsive Final Challenge</title>
   </head>
   <body>
+    <header role="banner">
+      <section role="region" class="nav-bar">
+        <a href="#" class="logo"><img src="logo.svg" alt="CRL logo" /></a>
+        <nav role="navigation" class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">about</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">sign in</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">sign up</a></li>
+          </ul>
+        </nav>
+      </section>
+      <section class="hero" role="banner">
+        <h1 class="title-primary"></h1>
+        <div class="text-content">
+          <p></p>
+          <a href=""></a>
+        </div>
+      </section>
+    </header>
+    <main role="main">
+      <section role="region">
+        <div class="selling-point">
+          <h2></h2>
+          <p></p>
+        </div>
+        <div class="selling-point">
+          <h2></h2>
+          <p></p>
+        </div>
+        <div class="selling-point">
+          <h2></h2>
+          <p></p>
+        </div>
+      </section>
+      <section role="region">
+        <article class="main-content">
+          <h2 class="secondary-title"></h2>
+          <p></p>
+          <div class="main-content__img"><img src="" alt="" /></div>
+          <p></p>
+        </article>
+        <aside class="sidebar">
+          <div>
+            <h2 class="sidebar-title"></h2>
+            <p></p>
+          </div>
+          <div>
+            <h2 class="sidebar-title"></h2>
+            <p></p>
+          </div>
+          <div>
+            <h2 class="sidebar-title"></h2>
+            <p></p>
+          </div>
+        </aside>
+      </section>
+    </main>
+    <footer role="contentinfo">
+      <section role="region">
+        <h2 class="section-title"></h2>
+        <article class="footer__nav">
+          <div class="company-info">
+            <h3 class="footer__nav-title"></h3>
+            <p></p>
+          </div>
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Home</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">About</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Contact</a>
+            </li>
+          </ul>
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Lorem ipsum</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">dolor</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">sit amet</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">consectetur</a>
+            </li>
+          </ul>
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Lorem ipsum</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">dolor</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">sit amet</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">consectetur</a>
+            </li>
+          </ul>
+        </article>
+      </section>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
