added content to finalChallenge index.html

--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -25,46 +25,60 @@
         </nav>
       </section>
       <section class="hero" role="banner">
-        <h1 class="title-primary"></h1>
+        <h1 class="title-primary">
+          Responsive layouts don't have to be a struggle
+        </h1>
         <div class="text-content">
-          <p></p>
-          <a href=""></a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+            officiis dolore corporis, ex voluptatibus eaque.
+          </p>
+          <a href="">I want to learn</a>
         </div>
       </section>
     </header>
     <main role="main">
       <section role="region">
         <div class="selling-point">
-          <h2></h2>
-          <p></p>
+          <h2>Mobile-first</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates
+            odio inventore ea, officiis aliquam vitae.
+          </p>
         </div>
         <div class="selling-point">
-          <h2></h2>
-          <p></p>
+          <h2>Efficient</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
+            neque accusamus excepturi est omnis. Ex.
+          </p>
         </div>
         <div class="selling-point">
-          <h2></h2>
-          <p></p>
+          <h2>Done right</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem sed
+            dolorem animi dolores veniam cupiditate?
+          </p>
         </div>
       </section>
       <section role="region">
         <article class="main-content">
-          <h2 class="secondary-title"></h2>
+          <h2 class="secondary-title">It doesn't have to be hard</h2>
           <p></p>
           <div class="main-content__img"><img src="" alt="" /></div>
           <p></p>
         </article>
         <aside class="sidebar">
           <div>
-            <h2 class="sidebar-title"></h2>
+            <h2 class="sidebar-title">Break it down</h2>
             <p></p>
           </div>
           <div>
-            <h2 class="sidebar-title"></h2>
+            <h2 class="sidebar-title">Work your way up</h2>
             <p></p>
           </div>
           <div>
-            <h2 class="sidebar-title"></h2>
+            <h2 class="sidebar-title">Quality Design</h2>
             <p></p>
           </div>
         </aside>
@@ -72,13 +86,19 @@
     </main>
     <footer role="contentinfo">
       <section role="region">
-        <h2 class="section-title"></h2>
+        <h2 class="section-title">just scratching the surface</h2>
         <article class="footer__nav">
           <div class="company-info">
-            <h3 class="footer__nav-title"></h3>
-            <p></p>
+            <h3 class="footer__nav-title">About our company</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non,
+              fugit. Dolor veniam libero ipsam ut.
+            </p>
           </div>
           <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Getting around</a>
+            </li>
             <li class="footer__nav-item">
               <a href="#" class="footer__nav-link">Home</a>
             </li>
@@ -90,6 +110,9 @@
             </li>
           </ul>
           <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Other things</a>
+            </li>
             <li class="footer__nav-item">
               <a href="#" class="footer__nav-link">Lorem ipsum</a>
             </li>
@@ -104,6 +127,9 @@
             </li>
           </ul>
           <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">And more</a>
+            </li>
             <li class="footer__nav-item">
               <a href="#" class="footer__nav-link">Lorem ipsum</a>
             </li>
