markup for nav-toggle and hamburger

--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -13,6 +13,9 @@
   <body>
     <header role="banner">
       <section role="region" class="nav-bar">
+        <button class="nav-toggle" aria-label="open or close navigation">
+          <span class="hamburger"></span>
+        </button>
         <a href="#" class="logo"><img src="logo.svg" alt="CRL logo" /></a>
         <nav role="navigation" class="nav">
           <ul class="nav__list">
@@ -65,7 +68,9 @@
         <article class="main-content">
           <h2 class="secondary-title">It doesn't have to be hard</h2>
           <p></p>
-          <div class="main-content__img"><img src="" alt="" /></div>
+          <div class="main-content__img">
+            <img src="finalChallengeImage.jpg" alt="" />
+          </div>
           <p></p>
         </article>
         <aside class="sidebar">
