--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -23,7 +23,9 @@
             <li class="nav__item"><a href="#" class="nav__link">about</a></li>
             <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
             <li class="nav__item"><a href="#" class="nav__link">sign in</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">sign up</a></li>
+            <li class="nav__item">
+              <a href="#" class="nav__link btn">sign up</a>
+            </li>
           </ul>
         </nav>
       </section>
