pushing both index.html and styles.css of finalChallenge

--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -11,37 +11,43 @@
     <title>CSS Responsive Final Challenge</title>
   </head>
   <body>
-    <header role="banner">
-      <section role="region" class="nav-bar">
-        <button class="nav-toggle" aria-label="open or close navigation">
-          <span class="hamburger"></span>
-        </button>
-        <a href="#" class="logo"><img src="logo.svg" alt="CRL logo" /></a>
-        <nav role="navigation" class="nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">about</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">sign in</a></li>
-            <li class="nav__item">
-              <a href="#" class="nav__link btn">sign up</a>
-            </li>
-          </ul>
-        </nav>
-      </section>
-      <section class="hero" role="banner">
-        <h1 class="title-primary">
-          Responsive layouts don't have to be a struggle
-        </h1>
-        <div class="text-content">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-            officiis dolore corporis, ex voluptatibus eaque.
-          </p>
-          <a href="">I want to learn</a>
-        </div>
-      </section>
+    <header class="header" role="banner">
+      <div class="container">
+        <section role="region" class="nav-bar">
+          <button class="nav-toggle" aria-label="open or close navigation">
+            <span class="hamburger"></span>
+          </button>
+          <a href="#" class="logo"><img src="logo.svg" alt="CRL logo" /></a>
+          <nav role="navigation" class="nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a href="#" class="nav__link">home</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">about</a></li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">contact</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">sign in</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link btn">sign up</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+      </div>
     </header>
+    <section class="hero" role="banner">
+      <h1 class="title-primary">
+        Responsive layouts don't have to be a struggle
+      </h1>
+      <div class="text-content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          officiis dolore corporis, ex voluptatibus eaque.
+        </p>
+        <a href="">I want to learn</a>
+      </div>
+    </section>
     <main role="main">
       <section role="region">
         <div class="selling-point">
