working on mobile layout of the footer

--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="header" role="banner">
-      <div class="container">
+      <div class="container less-padding">
         <section role="region" class="nav-bar">
           <div class="center-elements">
             <button class="nav-toggle" aria-label="open or close navigation">
