finalChallenge indexl.html completed!

--- a/finalChallenge/index.html
+++ b/finalChallenge/index.html
@@ -80,7 +80,7 @@
         </div>
       </section>
       <section role="region">
-        <div class="container">
+        <div class="container large-screen-column">
           <article class="main-content flow-content">
             <h2 class="secondary-title">It doesn't have to be hard</h2>
             <p>
@@ -137,54 +137,56 @@
                 fugit. Dolor veniam libero ipsam ut.
               </p>
             </div>
-            <ul class="footer__nav-list flow-content">
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Getting around</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Home</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">About</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Contact</a>
-              </li>
-            </ul>
-            <ul class="footer__nav-list flow-content">
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Other things</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Lorem ipsum</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">dolor</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">sit amet</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">consectetur</a>
-              </li>
-            </ul>
-            <ul class="footer__nav-list flow-content">
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">And more</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Lorem ipsum</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">dolor</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">sit amet</a>
-              </li>
-              <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">consectetur</a>
-              </li>
-            </ul>
+            <div class="footer__nav__container">
+              <ul class="footer__nav-list flow-content">
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">Getting around</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">Home</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">About</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">Contact</a>
+                </li>
+              </ul>
+              <ul class="footer__nav-list flow-content">
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">Other things</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">Lorem ipsum</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">dolor</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">sit amet</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">consectetur</a>
+                </li>
+              </ul>
+              <ul class="footer__nav-list flow-content">
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">And more</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">Lorem ipsum</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">dolor</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">sit amet</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="footer__nav-link">consectetur</a>
+                </li>
+              </ul>
+            </div>
           </article>
         </div>
       </section>
