html code for profile features

--- a/featureTesting/profile-match-largeRow.html
+++ b/featureTesting/profile-match-largeRow.html
@@ -14,7 +14,11 @@
     <section class="testimonials">
       <div class="wrapper">
         <article class="testimonials__displays">
-          <div id="first-display" class="testimonials__display">
+          <div class="arrow-container">
+            <span class="left-arrow">&#60;</span>
+            <span class="right-arrow">&#62;</span>
+          </div>
+          <div id="first-display" class="testimonials__display show">
             <div>
               <img src="https://source.unsplash.com/random/400x100" alt="" />
               <p>
