html file for profile match largeRow

--- a/featureTesting/profile-match-largeRow.html
+++ b/featureTesting/profile-match-largeRow.html
@@ -19,17 +19,29 @@
             <span class="right-arrow">&#62;</span>
           </div>
           <div id="first-display" class="testimonials__display show">
-            <div>
-              <img src="https://source.unsplash.com/random/400x100" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Dignissimos asperiores error quisquam minus consequatur harum
-                deleniti possimus tenetur! Deserunt, distinctio.
-              </p>
-            </div>
+            <img src="https://source.unsplash.com/random/400x435" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Dignissimos asperiores error quisquam minus consequatur harum
+              deleniti possimus tenetur! Deserunt, distinctio.
+            </p>
           </div>
-          <div id="second-display" class="testimonials__display"></div>
-          <div id="third-display" class="testimonials__display"></div>
+          <div id="second-display" class="testimonials__display">
+            <img src="https://source.unsplash.com/random/400x435" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Dignissimos asperiores error quisquam minus consequatur harum
+              deleniti possimus tenetur! Deserunt, distinctio.
+            </p>
+          </div>
+          <div id="third-display" class="testimonials__display">
+            <img src="https://source.unsplash.com/random/400x435" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Dignissimos asperiores error quisquam minus consequatur harum
+              deleniti possimus tenetur! Deserunt, distinctio.
+            </p>
+          </div>
         </article>
         <article class="testimonial__profiles">
           <!-- <a href="#first-display"> </a> -->
