markup for toggle feature

--- a/featureTestingToggleBetween/profile-match-largeRow-toggle.html
+++ b/featureTestingToggleBetween/profile-match-largeRow-toggle.html
@@ -21,6 +21,7 @@
             <label for="volunteer">Volunteer<span></span></label>
             <label for="non-profit">Non-Profit</label>
             <label for="sponsors">Sponors</label>
+            <span class="high-lighted-label"></span>
           </div>
         </div>
         <article class="testimonials__displays">
